--- a/css/components/card.css
+++ b/css/components/card.css
@@ -68,7 +68,7 @@
 }
 @media (max-width:50rem) {
     main {
-        margin-bottom: 1rem;
+        padding-bottom: 1rem;
     }
     .list-container {
     justify-content: center;
